Fixed margins and spacing. Only visual changes

--- a/src/components/inputBoxes/inputBox.css
+++ b/src/components/inputBoxes/inputBox.css
@@ -1,6 +1,12 @@
-.inputBoxLabel {
+/* .inputBoxLabel { */
+/* text-align: left; */
+/* margin-left: 4%; */
+/* } */
+
+.inputBoxContainer {
   text-align: left;
-  /* margin-left: 4%; */
+  width: 90%;
+  margin: auto;
 }
 
 .inputBox {
