--- a/src/components/mainForm.css
+++ b/src/components/mainForm.css
@@ -12,7 +12,7 @@
 
 .dropDownBoxWrapper {
   display: block;
-  width: 55%;
+  flex: 60%;
   text-align: left;
 }
 
@@ -24,4 +24,5 @@
   width: 90%;
   margin: auto;
   display: flex;
+  justify-content: space-between;
 }
